# citrus-hacks

./: Arduino Mira Code  Arduino Mira Code.ino  CLAUDE.md  STATUS.md  Terminal Code  mira_software_plan.md  owl.ino  script.py
blindaide/: audio.py  chord_input.py  context_engine.py  main.py  vision.py
braillevision_-social-cue-translator/: README.md
braillevision_-social-cue-translator/app/: braille_output.py  main.py  speech_output.py
braillevision_-social-cue-translator/cv_module/: README.md  camera.py  config.py  cue_detector.py  cue_log.py  event_manager.py  state_interpreter.py
braillevision_-social-cue-translator/docs/: cv_integration_notes.md
braillevision_-social-cue-translator/src/: App.tsx  constants.ts
data/: memory.json
dementia-anchor/: README.md  metadata.json
dementia-anchor/src/: App.tsx  constants.ts  index.css
docs/: ARCHITECTURE.md  DECISIONS.md  HARDWARE.md
docs/ideas/: mood_robot.md  (+5 more)
mira/: .env  .env.example  .env.local  pyproject.toml
mira-web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mira/data/: memory.json
mira/src/mira/: config.py  main.py
mira/src/mira/arduino/: commands.py  mock.py  serial_bridge.py
mira/src/mira/behavior/: presence.py  router.py
mira/src/mira/engines/: base.py  gemini_live.py  manual_pipeline.py
mira/src/mira/memory/: profile.py  store.py
mira/src/mira/parsing/: command_parser.py
mira/src/mira/prompts/: system.py
mira/src/mira/utils/: logging.py
social-cue-translator/: metadata.json
visual-cue-tracker/: index.html  package-lock.json  package.json
(+108 files in other folders)
