[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mira"
version = "0.1.0"
description = "Mira — dementia companion robot host software"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "pyserial>=3.5",
    "pyserial-asyncio>=0.6",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.2",
]
manual-pipeline = [
    "faster-whisper>=1.0",
    "elevenlabs>=1.0",
]

[project.scripts]
mira = "mira.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/mira"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/mira"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
